# localstack_tests

./: .gitignore  Readme.md  docker-compose.yml  lambda_function.py
Terraform/: lambda.tf  response.json
simple_lambda/: pyproject.toml  s3_uploader.py
simple_lambda/Terraform/: provider.tf
